[gd_scene load_steps=9 format=2]

[ext_resource path="res://pics/exitdoor_left.png" type="Texture" id=1]
[ext_resource path="res://items/TDoor.gd" type="Script" id=2]
[ext_resource path="res://pics/exitdoor_right.png" type="Texture" id=3]
[ext_resource path="res://pics/exitdoor_central.png" type="Texture" id=4]
[ext_resource path="res://items/TItem.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("exitdoor_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 15 ), Vector2( 15, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("exitdoor_right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 15 ), Vector2( 25, 15 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("exitdoor_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 15 ), Vector2( 5, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("exitdoor_right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 15 ), Vector2( 35, 15 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.26596, 6.26569 )

[node name="TDoor" type="Node2D"]
script = ExtResource( 2 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="exitdoor_central" type="Sprite" parent="."]
position = Vector2( 20, 20 )
texture = ExtResource( 4 )

[node name="exitdoor_left" type="Sprite" parent="."]
position = Vector2( 15, 15 )
texture = ExtResource( 1 )

[node name="exitdoor_right" type="Sprite" parent="."]
position = Vector2( 25, 15 )
texture = ExtResource( 3 )

[node name="pushbutton" parent="." instance=ExtResource( 5 )]
position = Vector2( -10, 0 )
init_frame = 202

[node name="exitzone" parent="." instance=ExtResource( 5 )]
position = Vector2( 15, 20 )
init_frame = 239

[node name="Sprite" parent="exitzone" index="0"]
frame = 239

[node name="CollisionShape2D" parent="exitzone" index="1"]
position = Vector2( 5.11136, 3.77502 )
shape = SubResource( 3 )

[node name="VickPosition" type="Position2D" parent="."]
position = Vector2( 20, 30 )

[connection signal="body_entered" from="pushbutton" to="." method="_on_pushbutton_body_entered"]
[connection signal="body_entered" from="exitzone" to="." method="_on_exitzone_body_entered"]

[editable path="exitzone"]
